# jupyter-keepalive

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  eslint.config.mjs  package.json  pyproject.toml  tsconfig.json
.github/: dependabot.yaml
.github/workflows/: release.yaml
ci/: check_installed_data.py  check_sdist.py
jupyter-config/: jupyter_keepalive.json
jupyter_keepalive/: __init__.py  handlers.py
src/: index.ts
tests/: test_spinner.py
