[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jupyter-keepalive"
description = "keep jupyter servers alive while you walk away"
readme = "README.md"
requires-python = ">=3.7"
license = "BSD-3-Clause"
keywords = []
authors = [
  { name = "Min RK", email = "benjaminrk@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "jupyter-server"
]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/minrk/jupyter-keepalive#readme"
Issues = "https://github.com/minrk/jupyter-keepalive/issues"
Source = "https://github.com/minrk/jupyter-keepalive"

[project.optional-dependencies]
test = [
  "jupyter_server[test]",
  "pytest",
  "pytest-asyncio",
  "pytest-cov",
]
[tool.hatch.version]
path = "jupyter_keepalive/__init__.py"

[tool.hatch.build.targets.wheel.shared-data]
"jupyter-config" = "etc/jupyter/jupyter_server_config.d"

[tool.coverage.run]
branch = true
parallel = true

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
