[build-system]
requires = ["hatchling", "jupyterlab"]
build-backend = "hatchling.build"

[project]
name = "jupyter-keepalive"
description = "keep jupyter servers alive while you walk away"
readme = "README.md"
requires-python = ">=3.7"
license = "BSD-3-Clause"
keywords = []
authors = [
  { name = "Min RK", email = "benjaminrk@gmail.com" },
  { name = "Yuvi", email = "yuvipanda@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "jupyter-server"
]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/minrk/jupyter-keepalive#readme"
Issues = "https://github.com/minrk/jupyter-keepalive/issues"
Source = "https://github.com/minrk/jupyter-keepalive"

[project.optional-dependencies]
test = [
  "jupyter_server[test]",
  "pytest",
  "pytest-asyncio",
  "pytest-cov",
]
[tool.hatch.version]
path = "jupyter_keepalive/__init__.py"

[tool.hatch.build.targets.sdist]
artifacts = [
    "jupyter_keepalive/labextension",
]

[tool.hatch.build.targets.wheel]
artifacts = [
    "jupyter_keepalive/labextension",
]

[tool.hatch.build.targets.wheel.shared-data]
"jupyter-config" = "etc/jupyter/jupyter_server_config.d"
"jupyter_keepalive/labextension" = "share/jupyter/labextensions/@minrk/jupyter-keepalive"


[tool.hatch.build.hooks.jupyter-builder]
dependencies = ["hatch-jupyter-builder"]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = [
    "jupyter_keepalive/labextension/static/style.js",
    "jupyter_keepalive/labextension/package.json",
]
skip-if-exists = ["jupyter_keepalive/labextension/package.json"]


[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
source_dir = "src"
build_dir = "jupyter_keepalive/labextension"
npm = ["jlpm"]

[tool.coverage.run]
branch = true
parallel = true

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.tbump]
github_url = "https://github.com/minrk/jupyter-keepalive"

[tool.tbump.version]
current = "0.4.0.dev"
regex = '''
    (?P<major>\d+)
    \.
    (?P<minor>\d+)
    \.
    (?P<patch>\d+)
    (?P<pre>((a|b|rc)\d+)|)
    \.?
    (?P<dev>(?<=\.)dev\d*|)
'''

[tool.tbump.git]
message_template = "Bump to {new_version}"
tag_template = "{new_version}"

[[tool.tbump.file]]
src = "jupyter_keepalive/__init__.py"

[[tool.tbump.file]]
src = "package.json"
version_template = "{major}.{minor}.{patch}"
